# python-package-managers-run

./: .gitignore  README.md  REUSE.toml  build.go  build_test.go  buildpack.toml  constants.go  detect.go  detect_test.go  go.mod  go.sum  init_test.go  integration.json  pyprojecthandler.go  pyprojecthandler_test.go  pyprojectparser.go  pyprojectparser_test.go  registries.json
.github/workflows/: push-buildpackage.yml  test-pull-request.yml
integration/: helpers.go
integration/packagers/: conda_default_test.go  conda_layer_reuse_test.go  conda_lock_file_test.go  conda_logging_test.go  conda_offline_test.go  init_test.go  pip_default_test.go  pip_offline_test.go  pip_reused_test.go  pipenv_default_test.go  pipenv_offline_test.go  pixi_default_test.go  pixi_layer_reuse_test.go  pm_mandatory_test.go  poetry_default_test.go  uv_default_test.go  uv_offline_test.go  uv_reused_test.go
integration/packagers/testdata/poetry/default_app/: pyproject.toml
integration/packagers/testdata/uv/default_app_vendored/: plan.toml  pyproject.toml
pkg/executable/: executable.go
pkg/packagers/common/: common.go
pkg/packagers/conda/: build.go  build_test.go  conda_runner.go  conda_runner_test.go  constants.go  detect.go  detect_test.go  init_test.go
pkg/packagers/pip/: README.md  build.go  build_test.go  constants.go  detect.go  detect_test.go  init_test.go  install_process.go  install_process_test.go  (+2 more)
pkg/sbom/: sbom.go
pkg/summer/: summer.go
run/: main.go
scripts/: build.sh  integration.sh  package.sh  publish.sh  unit.sh
scripts/.util/: builders.sh  print.sh  tools.sh
(+81 files in other folders)
