[tool.poetry]
name = "default_app"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
gunicorn = "^20.1.0"
setuptools = "^68.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
