# Copyright (c) 2013-Present CloudFoundry.org Foundation, Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "integration-test"
version = "0.0.0"
requires-python = "==3.10.*"
dependencies = [
    "Flask==2.1.3",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.1",
    "Werkzeug==2.2.1",
    "gunicorn==20.1.0",
    "itsdangerous==2.1.2",
    "setuptools==80.9.0",
]
